finished working masonry layout - final layout dependent on user testing. small bugs persistent, centering cards on small devices, seemless responsive transitions

--- a/src/css/resourcePageStyling.css
+++ b/src/css/resourcePageStyling.css
@@ -1,3 +1,4 @@
+/* original grid layout version */
 .resourcePage .resourceTab-content-container {
     display: flex;
     flex-direction: column;
@@ -77,8 +78,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 80%;
-    height: fit-content;
+    width: 280px;
     padding: 1.5rem;
     margin: 1rem 1rem 1rem 0;
     border-radius: 20px;
@@ -112,7 +112,6 @@
     padding: .125rem .5rem;
     margin: .15rem;
 } 
-/* ADD STYLING FOR SPECIFIC TAGS FOR DIFFERENT BACKGROUND AND BORDER COLORS IF WE COLOR CODE */
 .resourcePage .resourceCard-button {
     text-decoration: none;
     color: #2F4675;
@@ -135,7 +134,6 @@
         width: 60vw;
     }
     .resourcePage .resourceCard {
-        width: 280px;
         margin: 1rem;
     }
 }
@@ -156,7 +154,7 @@
 
 
 
-
+/* masonry layout version */
 /* .resourcePage .resourceTab-content-container {
     display: flex;
     flex-direction: column;
@@ -223,20 +221,17 @@
 
 .resourcePage .resourceTab-content {
     margin-left: 1.5rem;
-} */
+}
 
-/* .resourcePage .resourceTab-content-allResourceCards {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-} */
+.resourcePage .resourceTab-content-allResourceCards-masonry:first-child {
+    justify-content: center;
+}
 
-/* .resourcePage .resourceCard {
+.resourcePage .resourceCard {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 80%;
+    width: 280px;
     height: fit-content;
     padding: 1.5rem;
     margin: 1rem 1rem 1rem 0;
@@ -294,7 +289,6 @@
     }
     .resourcePage .resourceCard {
         width: 280px;
-        margin: 1rem;
     }
 }
 
@@ -304,6 +298,9 @@
     }
     .resourcePage .resourceTab-content {
         width: 75vw;
+    }
+    .resourcePage .resourceTab-content-allResourceCards {
+        display: block;
     }
 }
 
